# anchor-interface-2024

./: .pnp.cjs  Anchor.toml
programs/anchor-interface-2024/: Cargo.toml
programs/anchor-interface-2024/src/: lib.rs
tests/: anchor-interface-2024.ts
